- Enh #3147: Updated Request::getIsSecureConnection() to work with lower and uppercase config values (cebe)
- Enh #3182: Added namespace support for controllers in subdirectories (Ekstazi, samdark)
- Enh #3202: Adding support for the `X-HTTP-Method-Override` header in CHttpRequest (pawzar)
- Enh #3211: Added support for PHPUnit 3.8+ in the bootstrap (JoelMarcey, samdark)
- Enh #3307: Adding attribute localeClass to CApplication (pawzar)
- Enh #3228: Added an ability to migrate to the certain time (gorcer, resurtm)
- Enh #3277: CHtml::checkBoxList and radioButtonList to take into account closeSingleTag for <br> (hwmaier)
- Enh #3314: Removed async from special attribute list enabling async=false for scripts (wilwade)
- Enh #3324: Added syslog log route (miramir, resurtm)
- Chg #3137: Upgraded HTMLPurifier to 4.6.0 (samdark)
- Chg #3298: ListView and GridView: Added check for the existence of a href attribute in link pager (dutchakdev)
- New #2955: Added official support for MariaDB (cebe, DaSourcerer)

Version 1.1.14 August 11, 2013
------------------------------
- Bug: There was unnecessary echo in CRUD views generated by Gii (samdark)
- Bug: CJavaScript::encode was formatting floats in a wrong way during encoding (samdark)
- Bug: Fixed minLength and maxLength range check in CCaptchaAction::generateVerifyCode so values are now always stay in bounds (samdark)
- Bug #101: CActiveFinder::buildJoinTree() no longer uses 'false' for 'select' value (klimov-paul)
- Bug #135: Fixed wrong CActiveRecord rows count with having (klimov-paul)
- Bug #139: Fixed Active Record lazy load through relation with condition (klimov-paul)
- Bug #150: Fixed CWidget was not switching between view paths when using themes (antoncpu)
- Bug #159: CUploadedFile::getInstancesByName() has been fixed allowing correct fetching files, which name is a part of other file name (klimov-paul)